fixed wrap

--- a/css/style.css
+++ b/css/style.css
@@ -1810,10 +1810,13 @@ input[disabled].filters__input:disabled ~ .filters__label:active ::after {
   list-style: none;
 
   flex: auto;
+
+  max-width: 760px;
 }
 
 .content__item {
-  min-width: 360px
+  min-width: 360px;
+  max-width: 360px;
 }
 
 .content__item + .content__item:not(:nth-last-child(-n+2)) {
